--- a/tutorials/web_projects/js_02/index.html
+++ b/tutorials/web_projects/js_02/index.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 
 <body>
+    <div id="content">
 
+    </div>
 </body>
 
 </html>
